--- a/docs/colab_notebooks/1-the-basics.ipynb
+++ b/docs/colab_notebooks/1-the-basics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ec9667da",
+   "id": "e5e6a125",
    "metadata": {},
    "source": [
     "# 🎨 Data Designer Tutorial: The Basics\n",
@@ -14,41 +14,45 @@
   },
   {
    "cell_type": "markdown",
-   "id": "341d4a48",
+   "id": "3624a628",
    "metadata": {},
    "source": [
     "### ⚡ Colab Setup\n",
     "\n",
-    "Run the cells below to install the dependencies and set up the API key.\n"
+    "Run the cells below to install the dependencies and set up the API key. If you don't have an API key, you can generate one from [build.nvidia.com](https://build.nvidia.com).\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79ecb0d0",
+   "id": "06637f1c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install -q data-designer>=0.1.6"
+    "!pip install -q data-designer>=0.1.5"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60175007",
+   "id": "b22aaac1",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import getpass\n",
     "import os\n",
     "\n",
     "from google.colab import userdata\n",
     "\n",
-    "os.environ[\"NVIDIA_API_KEY\"] = userdata.get(\"NVIDIA_API_KEY\")"
+    "try:\n",
+    "    os.environ[\"NVIDIA_API_KEY\"] = userdata.get(\"NVIDIA_API_KEY\")\n",
+    "except userdata.SecretNotFoundError:\n",
+    "    os.environ[\"NVIDIA_API_KEY\"] = getpass.getpass(\"Enter your NVIDIA API key: \")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "58c7a23c",
+   "id": "3480b8ce",
    "metadata": {},
    "source": [
     "### 📦 Import the essentials\n",
@@ -59,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b51048b",
+   "id": "57b88371",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7743442a",
+   "id": "e395b791",
    "metadata": {},
    "source": [
     "### ⚙️ Initialize the Data Designer interface\n",
@@ -93,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47a2143c",
+   "id": "074bbb9d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23faa8ee",
+   "id": "0991c1fb",
    "metadata": {},
    "source": [
     "### 🎛️ Define model configurations\n",
@@ -119,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a31a803",
+   "id": "f9611ea0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +155,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5dd6cc4b",
+   "id": "c7cd421b",
    "metadata": {},
    "source": [
     "### 🏗️ Initialize the Data Designer Config Builder\n",
@@ -166,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f6daf5b",
+   "id": "2896ca4d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +179,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca28bf79",
+   "id": "e2c417a1",
    "metadata": {},
    "source": [
     "## 🎲 Getting started with sampler columns\n",
@@ -192,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc2970b7",
+   "id": "e7a7fbc3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +205,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dbe2ba06",
+   "id": "4d272b48",
    "metadata": {},
    "source": [
     "Let's start designing our product review dataset by adding product category and subcategory columns.\n"
@@ -210,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b78ee838",
+   "id": "a7884ce5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +295,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4aa0d91e",
+   "id": "b0c6c331",
    "metadata": {},
    "source": [
     "Next, let's add samplers to generate data related to the customer and their review.\n"
@@ -300,7 +304,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5297ff97",
+   "id": "c05ef860",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +341,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39b0ab09",
+   "id": "47ad6af8",
    "metadata": {},
    "source": [
     "## 🦜 LLM-generated columns\n",
@@ -352,7 +356,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b92eea36",
+   "id": "3a2d9680",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +393,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae82081b",
+   "id": "d7f99a8f",
    "metadata": {},
    "source": [
     "### 🔁 Iteration is key – preview the dataset!\n",
@@ -406,7 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61ad8562",
+   "id": "e5637e52",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +420,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91d30f43",
+   "id": "50f9c5ca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,7 +431,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86090f7f",
+   "id": "20c293e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,7 +441,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bdc88621",
+   "id": "185f254b",
    "metadata": {},
    "source": [
     "### 📊 Analyze the generated data\n",
@@ -450,7 +454,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef1f2426",
+   "id": "2e5e82df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,7 +464,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e91097e",
+   "id": "5c685e44",
    "metadata": {},
    "source": [
     "### 🆙 Scale up!\n",
@@ -473,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44192aab",
+   "id": "7a96c763",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -483,7 +487,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6725271d",
+   "id": "0aef9021",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -496,7 +500,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "491d20af",
+   "id": "39a7932a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -508,7 +512,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70f9c440",
+   "id": "f329ebf9",
    "metadata": {},
    "source": [
     "## ⏭️ Next Steps\n",
