--- a/docs/colab_notebooks/2-structured-outputs-and-jinja-expressions.ipynb
+++ b/docs/colab_notebooks/2-structured-outputs-and-jinja-expressions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3f53bedb",
+   "id": "1429ff3c",
    "metadata": {},
    "source": [
     "# 🎨 Data Designer Tutorial: Structured Outputs and Jinja Expressions\n",
@@ -16,41 +16,45 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4086037e",
+   "id": "afa0eed7",
    "metadata": {},
    "source": [
     "### ⚡ Colab Setup\n",
     "\n",
-    "Run the cells below to install the dependencies and set up the API key.\n"
+    "Run the cells below to install the dependencies and set up the API key. If you don't have an API key, you can generate one from [build.nvidia.com](https://build.nvidia.com).\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2afd1f7",
+   "id": "f11db2d2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install -q data-designer>=0.1.6"
+    "!pip install -q data-designer>=0.1.5"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "07e57a6e",
+   "id": "e37da6da",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import getpass\n",
     "import os\n",
     "\n",
     "from google.colab import userdata\n",
     "\n",
-    "os.environ[\"NVIDIA_API_KEY\"] = userdata.get(\"NVIDIA_API_KEY\")"
+    "try:\n",
+    "    os.environ[\"NVIDIA_API_KEY\"] = userdata.get(\"NVIDIA_API_KEY\")\n",
+    "except userdata.SecretNotFoundError:\n",
+    "    os.environ[\"NVIDIA_API_KEY\"] = getpass.getpass(\"Enter your NVIDIA API key: \")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "138c072c",
+   "id": "7b870a00",
    "metadata": {},
    "source": [
     "### 📦 Import the essentials\n",
@@ -61,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77acc96a",
+   "id": "d7f3d55b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +86,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4269003",
+   "id": "9ec98c2a",
    "metadata": {},
    "source": [
     "### ⚙️ Initialize the Data Designer interface\n",
@@ -95,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d622824f",
+   "id": "3374c9ca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee7e7e22",
+   "id": "a7ba9915",
    "metadata": {},
    "source": [
     "### 🎛️ Define model configurations\n",
@@ -121,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fcf88403",
+   "id": "97174b12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +157,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f4a36da",
+   "id": "146a50e6",
    "metadata": {},
    "source": [
     "### 🏗️ Initialize the Data Designer Config Builder\n",
@@ -168,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c55b0aac",
+   "id": "bb746e7d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +181,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6197bced",
+   "id": "b9f8dd8b",
    "metadata": {},
    "source": [
     "### 🧑‍🎨 Designing our data\n",
@@ -204,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "501026dd",
+   "id": "9d20677d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +236,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e07235d6",
+   "id": "dc580c93",
    "metadata": {},
    "source": [
     "Next, let's design our product review dataset using a few more tricks compared to the previous notebook.\n"
@@ -241,7 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "643fca70",
+   "id": "677921e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +354,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65af2821",
+   "id": "d9ea22bf",
    "metadata": {},
    "source": [
     "Next, we will use more advanced Jinja expressions to create new columns.\n",
@@ -367,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8669e16",
+   "id": "abfa418a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,7 +425,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "955833fc",
+   "id": "0129dd86",
    "metadata": {},
    "source": [
     "### 🔁 Iteration is key – preview the dataset!\n",
@@ -438,7 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "602ed286",
+   "id": "7adee26e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,7 +452,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c3e6f74e",
+   "id": "36fa3c62",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -459,7 +463,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53f7bcb3",
+   "id": "67bc0a68",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -469,7 +473,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fddf7bad",
+   "id": "4dc3c12c",
    "metadata": {},
    "source": [
     "### 📊 Analyze the generated data\n",
@@ -482,7 +486,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "391f45b1",
+   "id": "31717c45",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,7 +496,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7dae0a0",
+   "id": "27911ce8",
    "metadata": {},
    "source": [
     "### 🆙 Scale up!\n",
@@ -505,7 +509,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b0677ae",
+   "id": "7c2167fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -515,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1945840f",
+   "id": "5f170797",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -528,7 +532,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3c85e29",
+   "id": "cdc8f67b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -540,7 +544,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26a2f7cf",
+   "id": "0c1a4900",
    "metadata": {},
    "source": [
     "## ⏭️ Next Steps\n",
