--- a/docs/colab_notebooks/3-seeding-with-a-dataset.ipynb
+++ b/docs/colab_notebooks/3-seeding-with-a-dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "fb66d4f6",
+   "id": "40de3ce2",
    "metadata": {},
    "source": [
     "# 🎨 Data Designer Tutorial: Seeding Synthetic Data Generation with an External Dataset\n",
@@ -16,41 +16,45 @@
   },
   {
    "cell_type": "markdown",
-   "id": "720d6b46",
+   "id": "ade9e4d1",
    "metadata": {},
    "source": [
     "### ⚡ Colab Setup\n",
     "\n",
-    "Run the cells below to install the dependencies and set up the API key.\n"
+    "Run the cells below to install the dependencies and set up the API key. If you don't have an API key, you can generate one from [build.nvidia.com](https://build.nvidia.com).\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c24567c",
+   "id": "001db352",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install -q data-designer>=0.1.6"
+    "!pip install -q data-designer>=0.1.5"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f02f461",
+   "id": "68c77018",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import getpass\n",
     "import os\n",
     "\n",
     "from google.colab import userdata\n",
     "\n",
-    "os.environ[\"NVIDIA_API_KEY\"] = userdata.get(\"NVIDIA_API_KEY\")"
+    "try:\n",
+    "    os.environ[\"NVIDIA_API_KEY\"] = userdata.get(\"NVIDIA_API_KEY\")\n",
+    "except userdata.SecretNotFoundError:\n",
+    "    os.environ[\"NVIDIA_API_KEY\"] = getpass.getpass(\"Enter your NVIDIA API key: \")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "4f9d5b8e",
+   "id": "d7c03ce9",
    "metadata": {},
    "source": [
     "### 📦 Import the essentials\n",
@@ -61,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f8d7c320",
+   "id": "049baf76",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +80,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17689e82",
+   "id": "98e7a674",
    "metadata": {},
    "source": [
     "### ⚙️ Initialize the Data Designer interface\n",
@@ -89,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54947242",
+   "id": "d3817dd2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48bb816e",
+   "id": "da5488bb",
    "metadata": {},
    "source": [
     "### 🎛️ Define model configurations\n",
@@ -115,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9158afff",
+   "id": "51c2675f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +151,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "caa847b8",
+   "id": "c0c7a10e",
    "metadata": {},
    "source": [
     "### 🏗️ Initialize the Data Designer Config Builder\n",
@@ -162,7 +166,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9fbbb41",
+   "id": "a8aa8ab1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "840a96be",
+   "id": "76a3082a",
    "metadata": {},
    "source": [
     "## 🏥 Prepare a seed dataset\n",
@@ -196,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b08702a",
+   "id": "be917d7a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +218,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf3075dc",
+   "id": "9aef6903",
    "metadata": {},
    "source": [
     "## 🎨 Designing our synthetic patient notes dataset\n",
@@ -231,7 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72ef6998",
+   "id": "a3b2598a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +325,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38837ef0",
+   "id": "b9410f6a",
    "metadata": {},
    "source": [
     "### 🔁 Iteration is key – preview the dataset!\n",
@@ -338,7 +342,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "849987f6",
+   "id": "5ed93859",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +352,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b993fdea",
+   "id": "702e1f9b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,7 +363,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d9fbf4d",
+   "id": "eda5506a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,7 +373,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ad17ac1",
+   "id": "bb355499",
    "metadata": {},
    "source": [
     "### 📊 Analyze the generated data\n",
@@ -382,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92487456",
+   "id": "71835cd6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,7 +396,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3219bb8",
+   "id": "e3f1f1b0",
    "metadata": {},
    "source": [
     "### 🆙 Scale up!\n",
@@ -405,7 +409,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "488e15bf",
+   "id": "c45c2641",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +419,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4bc23ee4",
+   "id": "aa817871",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48ca6bb9",
+   "id": "0e96493b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,7 +444,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8bfff6c5",
+   "id": "a083ed48",
    "metadata": {},
    "source": [
     "## ⏭️ Next Steps\n",
