--- a/docs/colab_notebooks/4-providing-images-as-context.ipynb
+++ b/docs/colab_notebooks/4-providing-images-as-context.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "70f9bdbf",
+   "id": "809f5cfb",
    "metadata": {},
    "source": [
     "# 🎨 Data Designer Tutorial: Providing Images as Context for Vision-Based Data Generation"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17bf15ef",
+   "id": "bcbeea27",
    "metadata": {},
    "source": [
     "#### 📚 What you'll learn\n",
@@ -25,41 +25,45 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47b661ec",
+   "id": "8cba0a51",
    "metadata": {},
    "source": [
     "### ⚡ Colab Setup\n",
     "\n",
-    "Run the cells below to install the dependencies and set up the API key.\n"
+    "Run the cells below to install the dependencies and set up the API key. If you don't have an API key, you can generate one from [build.nvidia.com](https://build.nvidia.com).\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "caac58a1",
+   "id": "d2b68d0b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install -q data-designer>=0.1.6 pillow>=12.0.0"
+    "!pip install -q data-designer>=0.1.5 pillow>=12.0.0"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af9bb850",
+   "id": "d9ffdf48",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import getpass\n",
     "import os\n",
     "\n",
     "from google.colab import userdata\n",
     "\n",
-    "os.environ[\"NVIDIA_API_KEY\"] = userdata.get(\"NVIDIA_API_KEY\")"
+    "try:\n",
+    "    os.environ[\"NVIDIA_API_KEY\"] = userdata.get(\"NVIDIA_API_KEY\")\n",
+    "except userdata.SecretNotFoundError:\n",
+    "    os.environ[\"NVIDIA_API_KEY\"] = getpass.getpass(\"Enter your NVIDIA API key: \")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "52062953",
+   "id": "6673f9ea",
    "metadata": {},
    "source": [
     "### 📦 Import the essentials\n",
@@ -70,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5406d2f8",
+   "id": "10031076",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +105,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18d9e8a8",
+   "id": "aa2128d0",
    "metadata": {},
    "source": [
     "### ⚙️ Initialize the Data Designer interface\n",
@@ -114,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f7ea1cfd",
+   "id": "cd925eca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +127,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "498dbf37",
+   "id": "e9edeee0",
    "metadata": {},
    "source": [
     "### 🎛️ Define model configurations\n",
@@ -140,7 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d02da766",
+   "id": "26e59d13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +167,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "652e35c4",
+   "id": "8c24afd7",
    "metadata": {},
    "source": [
     "### 🏗️ Initialize the Data Designer Config Builder\n",
@@ -178,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9105d13a",
+   "id": "555eb2f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +191,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f2e0c3f",
+   "id": "7a87a2ec",
    "metadata": {},
    "source": [
     "### 🌱 Seed Dataset Creation\n",
@@ -204,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0868eefd",
+   "id": "d95a5705",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "017fd352",
+   "id": "de2624c1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +271,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82c3e194",
+   "id": "79886f68",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +289,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ccb2131",
+   "id": "ef8b5065",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2bee55a3",
+   "id": "97d977af",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38535fad",
+   "id": "d8338041",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -338,7 +342,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1dfeef0f",
+   "id": "14cc596c",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -346,7 +350,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "540c1560",
+   "id": "7ce24cb6",
    "metadata": {},
    "source": [
     "### 🔁 Iteration is key – preview the dataset!\n",
@@ -363,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c203e707",
+   "id": "05697bc3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +377,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "477a82bf",
+   "id": "48d9675a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,7 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4add7bae",
+   "id": "3f8d9f72",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +398,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2add3b7e",
+   "id": "b4df79e4",
    "metadata": {},
    "source": [
     "### 📊 Analyze the generated data\n",
@@ -407,7 +411,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9420b94",
+   "id": "4d52876b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,7 +421,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2561626c",
+   "id": "4b65245e",
    "metadata": {},
    "source": [
     "### 🔎 Visual Inspection\n",
@@ -428,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da172f7a",
+   "id": "8853ae73",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -452,7 +456,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d55e0dcf",
+   "id": "843e982e",
    "metadata": {},
    "source": [
     "### 🆙 Scale up!\n",
@@ -465,7 +469,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ebc2769",
+   "id": "9684a964",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc034afb",
+   "id": "4977d299",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +492,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b769554e",
+   "id": "4b13cfdd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,7 +504,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d19e830",
+   "id": "11d0f65a",
    "metadata": {},
    "source": [
     "## ⏭️ Next Steps\n",
